# q

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/shaders/: chunk.frag  chunk.vert
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  asset_loader.cpp  asset_loader.hpp  asset_loader.inl  camera.cpp  camera.hpp  chunk_mesher.cpp  chunk_mesher.hpp  game_renderer.cpp  game_renderer.hpp  game_window.cpp  game_window.hpp  game_world.cpp  game_world.hpp  input_manager.cpp  input_manager.hpp  mesh.cpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp  models.cpp  models.hpp
src/gl/: CMakeLists.txt  buffer_object.cpp  buffer_object.hpp  buffer_object.inl  shader.hpp  shader.inl  shader_program.cpp  shader_program.hpp  shader_program.inl  util.hpp  util.inl  vertex_array_object.cpp  vertex_array_object.hpp  vertex_attribute.cpp  vertex_attribute.hpp  vertex_attribute.inl
src/server/: CMakeLists.txt  server.hpp
src/shared/: CMakeLists.txt  chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp  filesystem.cpp  filesystem.hpp  math.hpp  ray.cpp  ray.hpp
